<resources>
    <string name="app_name">Meine Notizen</string>

    <!-- fragment_new_entry_dialog -->
    <string name="new_entry_dialog_header">Neuer Eintrag</string>
    <string name="new_entry_dialog_btn_save">Speichern</string>
    <string name="new_entry_dialog_hint_title">Titel</string>
    <string name="new_entry_dialog_hint_text">Text</string>

    <!-- fragment_new_subject_dialog -->
    <string name="new_subject_dialog_hint_title">Neue Kategorie</string>
    <string name="new_subject_dialog_hint_description">Beschreibung (optional)</string>
    <string name="new_subject_dialog_btn_save">Speichern</string>
    <string name="new_subject_dialog_btn_cancel">Abbrechen</string>

    <!-- EntryRecyclerViewAdapter -->
    <string name="dialog_delete_entry">Eintrag löschen?</string>
    <string name="dialog_delete_entry_delete">Löschen</string>
    <string name="dialog_delete_entry_cancel">Abbrechen</string>

    <!-- SubjectRecyclerViewAdapter -->
    <string name="subject_last_change">Zuletzt geändert am</string>
    <string name="dialog_delete_subject">Kategorie und untergeordnete Einträge löschen?</string>

    <!-- Dialoge -->
    <string name="dialog_input_error">Ungültige Eingabe</string>

    <!-- HelpActivity -->
    <string name="help_activity_title">Hilfe</string>
    <string name="help_text">meineNotizen bietet die Möglichkeit ...</string>
    <string name="help_subject_title">Kategorie</string>
    <string name="help_subject_text">
        In dieser Ansicht können neue Kategorien angelegt, geändert oder gelöscht werden.\nDurch anklicken einer Kategorie gelangt man zu den Einträgen der jeweiligen Kategorie.\nDurch ein long press auf eine Kategorie erscheint ein Menü, durch welches die Kategorie
        bearbeitet oder gelöscht werden kann.
    </string>

</resources>
