<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_entry_dialog_hint_title" />

    <EditText
        android:id="@+id/edit_text_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_entry_dialog_hint_text" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry_dialog_btn_save" />

</LinearLayout>